# nnm

./: .gitignore  README.md  cartoon-style-transfer.md  low-light-image-enhancement.md  main.py  pyproject.toml  setup.py
.github/workflows/: main.yml
diffusion/: mnist_diffusion.py  toy_ddpm.py
docs/: detr.md
gans/: gan.py
nnm/backbone/: pp_lcnet_v3.py
nnm/cache/: __init__.py  attention.py  base.py  state.py
nnm/checkpoint/: ema.py  saver.py
nnm/layers/: activation.py  attention.py  drop.py  positional.py  rope.py  rwkv.py  vit.py
nnm/models/: lfm2.py  magika.py  qwen2.py  rwkv.py
nnm/models/pp_ocrv5/: mobile_det.py  mobile_rec.py
nnm/utils/: flops.py  param.py
tests/: conftest.py  test_attention.py  test_lfm2.py  test_magika.py  test_positional.py  test_pp_ocrv5_mobile.py  test_qwen2.py  test_rope.py  test_rwkv.py  test_vit.py
torchstudio/diffusion/: toy_ddpm.py
torchstudio/vae/: mnist_vae.py
vae/: mnist_vae.py
