[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "nnm"
dynamic = ["version"]
description = "Neural Network Models"
readme = "README.md"
authors = [
    {name = "Jiau Zhang", email = "jiauzhang@163.com"},
]
license = {file = "LICENSE"}
classifiers = [
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]
keywords = [
    'PyTorch',
    'Deep Learning',
    'Artificial Intelligence',
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "torch",
    'fakeset',
    'conippets>=0.1.12',
]

[project.urls]
Homepage = "https://github.com/jiauzhang/nnm"

[tool.hatch.version]
path = "nnm/version.py"

[tool.hatch.build.targets.wheel]
packages = ["nnm"]

[project.optional-dependencies]
dev = [
    "transformers==5.5.0",
    "pytest==8.3.4",
    "black>=26.3.0",
]

[tool.black]
line-length = 128

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
